--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,8 @@ dependencies {
      * 系统库
      */
     compile 'com.android.support:appcompat-v7:25.0.0'
+    /**
+     * Android系统SharedPreferences进行的封装
+     */
     compile 'com.github.AcmenXD:SpTool:1.0'
 }
