调整兼容版本,支持4.0(含)以上系统

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,6 @@ dependencies {
     /**
      * Android系统SharedPreferences进行的封装
      */
-    //    compile 'com.github.AcmenXD:SpTool:1.0'
-    compile project(':sptool')
+    compile 'com.github.AcmenXD:SpTool:1.1'
+//    compile project(':sptool')
 }
