--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,6 @@ dependencies {
     /**
      * Android系统SharedPreferences进行的封装
      */
-    compile 'com.github.AcmenXD:SpTool:1.4'
-//    compile project(':sptool')
+//    compile 'com.github.AcmenXD:SpTool:2.0'
+    compile project(':sptool')
 }
